# PhoenixCore

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  license.txt  readme.txt
Docs/: PhAux_8h-source.htm  PhBackground_8h-source.htm  PhBoxEmitter_8h-source.htm  PhColor_8h-source.htm  PhDrawNode_8h-source.htm  PhEffector_8h-source.htm  PhEmitter_8h-source.htm  PhEventHandle_8h-source.htm  PhExtendedBackground_8h-source.htm  PhFunctions_8h-source.htm  PhGravityEffector_8h-source.htm  PhKeys_8h-source.htm  PhLightManager_8h-source.htm  PhLight_8h-source.htm  PhLogManager_8h-source.htm  PhLog_8h-source.htm  PhParticleDestroyer_8h-source.htm  PhParticleSystem_8h-source.htm  PhParticle_8h-source.htm  PhPolygonCollisionObject_8h-source.htm  PhPolygonCollision_8h-source.htm  PhPolygon_8h-source.htm  PhRect_8h-source.htm  PhRenderSystem_8h-source.htm  PhRenderTexture_8h-source.htm  PhRotationMatrix_8h-source.htm  PhSceneManager_8h-source.htm  PhSceneNode_8h-source.htm  PhSolidBackground_8h-source.htm  PhSpriteAnimation_8h-source.htm  PhTextureManager_8h-source.htm  PhTexture_8h-source.htm  PhTileMap_8h-source.htm  PhTimer_8h-source.htm  PhVector2d_8h-source.htm  PhVertexLightSystem_8h-source.htm  PhVertexLight_8h-source.htm  PhView_8h-source.htm  Phoenix_8h-source.htm  PrecompiledFont_8h-source.htm  (+304 more)
Phoenix SVN/: PhAux.cpp  PhAux.h  PhBackground.h  PhBoxEmitter.h  PhColor.h  PhDrawNode.cpp  PhDrawNode.h  PhExtendedBackground.cpp  PhGravityEffector.h  PhParticleDestroyer.cpp  PhParticleSystem.cpp  PhPolygon.h  PhPolygonCollision.cpp  PhPolygonCollisionObject.cpp  PhRect.cpp  PhRect.h  PhRenderSystem.cpp  PhRenderSystem.h  PhSceneManager.cpp  PhSceneManager.h  PhSpriteAnimation.h  PhTextureManager.h  PhTileMap.cpp  PhTimer.h  PhVector2d.cpp  PhVector2d.h
data/: desaturate.glsl  fragment.glsl  vertex.glsl
examples/: 01 helloworld.cpp  02 shapes.cpp  03 textures.cpp  04 Persistence.cpp  04 persistence.cpp  05 resources.cpp  06 geometry.cpp  07 views.cpp  CMakeLists.txt  box2d.cpp  helloworld.cpp
libPhoenixGL/: .PhRenderSystem.h  PhAux.cpp  PhAux.h  PhBackground.cpp  PhBackground.h  PhBoxEmitter.cpp  PhColor.cpp  PhColor.h  PhDrawNode.cpp  PhDrawNode.h  PhEffector.cpp  PhEffector.h  PhEmitter.cpp  PhEmitter.h  PhEventHandle.cpp  PhEventHandle.h  PhExtendedBackground.cpp  PhExtendedBackground.h  PhFunctions.h  PhGravityEffector.cpp  PhGravityEffector.h  PhKeys.h  PhLight.cpp  PhLight.h  PhLightManager.cpp  PhLightManager.h  PhLightSystem.cpp  PhLightSystem.h  PhLog.cpp  PhLog.h  PhLogManager.cpp  PhLogManager.h  PhParticle.cpp  PhParticle.h  PhParticleDestroyer.cpp  PhParticleDestroyer.h  PhParticleSystem.cpp  PhParticleSystem.h  PhPolygon.cpp  PhPolygon.h  (+38 more)
libPhoenixGL/png/: png.h
libPhoenixGL/zlib/: crc32.c  zconf.h  zutil.c
source/: 2dGraphicsFactory.cpp  2dGraphicsFactory.h  AbstractGarbageCollector.h  AbstractGeometryFactory.h  BMFontLoader.cpp  BMFontLoader.h  BatchGeometry.h  BatchGeometryComposite.h  BatchRenderer.cpp  BatchRenderer.h  BatchState.h  BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Color.h  DebugConsole.cpp  DebugConsole.h  DroidSansMono.cpp  DroidSansMono.h  Droppable.h  EventReceiver.cpp  EventReceiver.h  Font.h  Functions.h  GLFWWindowManager.cpp  GLFWWindowManager.h  GeometryState.h  GroupState.h  Keys.h  Phoenix.h  Polygon.cpp  Polygon.h  PrecompiledFont.h  Rectangle.cpp  Rectangle.h  RenderSystem.cpp  RenderSystem.h  RenderTarget.h  RenderTexture.h  Resource.h  (+18 more)
source/soil/: SOIL.c
tests/: CMakeLists.txt  Demo.h  EventTest.h  FontTest.h  GeometryTest.h  PolygonTest.h  ResourceTest.h  ShaderTest.h  SingletonTest.h  TextureTest.h  TristripTest.h  VectorTest.h  ViewTest.h  main.cpp
